--- a/gametimego/.classpath
+++ b/gametimego/.classpath
@@ -2,6 +2,10 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
-	<classpathentry kind="lib" path="C:/Users/Ungoth/Downloads/lwjgl-2.8.3/lwjgl-2.8.3/jar/lwjgl.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Ungoth/Downloads/lwjgl-2.8.3/lwjgl-2.8.3/jar/lwjgl.jar">
+		<attributes>
+			<attribute name="org.eclipse.jdt.launching.CLASSPATH_ATTR_LIBRARY_PATH_ENTRY" value="C:/Users/Ungoth/Downloads/lwjgl-2.8.3/lwjgl-2.8.3/native/windows"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
