--- a/gametimego/.classpath
+++ b/gametimego/.classpath
@@ -7,5 +7,6 @@
 			<attribute name="org.eclipse.jdt.launching.CLASSPATH_ATTR_LIBRARY_PATH_ENTRY" value="C:/Users/Ungoth/Downloads/lwjgl-2.8.3/lwjgl-2.8.3/native/windows"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="C:/Users/Ungoth/Downloads/lwjgl-2.8.3/slick.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
